@@ -6876,6 +6876,7 @@ State was change by %s (username: %s)
 		global $TCA, $TYPO3_CONF_VARS;
 
 		$uid = intval($uid);
+		$pageUid = 0;
 		if (is_array($TCA[$table]) && $uid > 0)	{
 
 				// Get Page TSconfig relavant:
@@ -6936,7 +6937,7 @@ State was change by %s (username: %s)
 							}
 						}
 					} else {	// For other tables than "pages", delete cache for the records "parent page".
-						$list_cache[] = intval($this->getPID($table,$uid));
+						$list_cache[] = $pageUid = intval($this->getPID($table,$uid));
 					}
 
 						// Call pre-processing function for clearing of cache for page ids:
@@ -6966,10 +6967,8 @@ State was change by %s (username: %s)
 			}
 
 				// Call post processing function for clear-cache:
-			global $TYPO3_CONF_VARS;
 			if (is_array($TYPO3_CONF_VARS['SC_OPTIONS']['t3lib/class.t3lib_tcemain.php']['clearCachePostProc']))	{
-// FIXME $uid_page is undefined
-				$_params = array('table' => $table,'uid' => $uid,'uid_page' => $uid_page,'TSConfig' => $TSConfig);
+				$_params = array('table' => $table,'uid' => $uid,'uid_page' => $pageUid,'TSConfig' => $TSConfig);
 				foreach($TYPO3_CONF_VARS['SC_OPTIONS']['t3lib/class.t3lib_tcemain.php']['clearCachePostProc'] as $_funcRef)	{
 					t3lib_div::callUserFunction($_funcRef,$_params,$this);
 				}
