@@ -1,3 +1,7 @@
+2008-09-18  Martin Kutschker  <masi@typo3.org>
+
+	* Fixed bug #8950: page id not availabe in TCEmain hook clearCachePostProc
+
 2008-09-18  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #9331: htmlArea RTE Acronym feature: List of unabridged terms shows wrong values
